<h5>3.1 Final        [2021-08-10]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9
<hr>
- added test data (mamba)

<h5>3.1 RC 2        [2020-09-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.10, PHP 8.0 Beta2
<hr>
- fixed warning about XoopsObject compatibility (issue #10) (goffy)
- PHP 8 adjustments (mamba)
- various fixes, updates, cosmetics (mamba)

<h5>3.1 RC 1        [2019-12-22]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.1
<hr>
- __NAMESPACE__ in Helper.php (mamba)
- renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
- cosmetics, PSR12 (mamba)
- decreased index key length (mamba) (MySQL error #1071)
- added few \Xmf\Request checks (mamba)
- Scrutinizer suggestions (mamba)


<h5>3.1 Beta 1        [NOT RELEASED]</h5>
<hr>
- cosmetics (mamba)
- renamed XLANG to XLANGUAGE (mamba)
- namespaces (mamba)
- autoloading (mamba)
- moved config/config.php to /config/config.ph (mamba)


<h5>3.05 RC 1        [2017-09-02]</h5>
<hr>
- code cosmetics (mamba)
- removed @version (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- XOOPS 2.5.8, PHP 7 (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- php-cs-fixer updates (mamba)
- started conversion to XMF (mamba)
    &nbsp;&nbsp;- updated addInfoBoxLine entries (mamba)
    &nbsp;&nbsp;- displayNavigation(basename(__FILE__))  (mamba)
    &nbsp;&nbsp;- changed to ->displayButton('left') (mamba)


<h5>3.05 Beta 1       [NOT RELEASED</h5>
<hr>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- fixed language auto-detection (Rewarder/Mamba)


<h5>3.04</h5>
<hr>
- updated POSIX Regex to PCRE (Mamba)
- minor fixes (Mamba)
- fixing generation of configuration file for extended languages


<h5>3.03</h5>
<hr>
1 updated to XOOPS 2.5.x GUI using ModuleAdmin class (Mamba)


<h5>3.02</h5>
<hr>