@@ -29,9 +29,9 @@ $helper->loadLanguage('common');
 
 // ------------------- Informations ------------------- //
 $modversion = [
-    'version'             => 3.1,
+    'version'             => '3.1.1',
     'module_status'       => 'Final',
-    'release_date'        => '2021/08/10',
+    'release_date'        => '2021/08/13',
     'name'                => _MI_XLANGUAGE_NAME,
     'description'         => _MI_XLANGUAGE_DESC,
     'official'            => 1, //1 indicates official XOOPS module supported by XOOPS Dev Team, 0 means 3rd party supported
