@@ -1,3 +1,8 @@
+<h5>3.1.1 Final        [2021-08-13]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9
+<hr>
+- added missing index.html in root issues #19 (alain01/mamba)
+
+
 <h5>3.1 Final        [2021-08-10]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9
 <hr>
 - added test data (mamba)
